<resources>
    <string name="app_nameballer">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="swoowsh_logo">swoowsh logo</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="desire_to_league">Desire To League</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="beginner">Beginner</string>
    <string name="finish">FINISH</string>
    <string name="baller">Baller</string>
    <string name="search_League">Looking for a co-ed beginner league near you...</string>
    <string name="textview">TextView</string>
    <string name="searching">SEARCHING</string>
</resources>
