<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/bgImg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="124dp"
            android:layout_height="46dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/swooshLogo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/swoowsh_logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:textSize="20sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="54dp" app:layout_constraintTop_toBottomOf="@+id/swooshLogo"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="62dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp">
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:layout_weight="1"
                tools:layout_editor_absoluteY="173dp" tools:layout_editor_absoluteX="112dp"
                android:background="@drawable/swoosh_toogle" android:textOff="@string/beginner"
                android:textOn="@string/beginner"
                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat" android:textSize="18sp"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
                android:background="@drawable/swoosh_toogle" android:textOff="@string/baller"
                android:textOn="@string/baller"
                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat" android:textSize="18sp"
                android:layout_marginStart="10sp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FinishedBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/bgImg"
            android:textSize="24sp"/>
</android.support.constraint.ConstraintLayout>